--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.datasource.password=jws
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+management.endpoints.web.exposure.include=metrics,health,info, prometheus
+
+# To expose all actuator endpoints, use:
+# management.endpoints.web.exposure.include=*
