--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-management.endpoints.web.exposure.include=metrics,health,info, prometheus
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=metrics,prometheus,health,info
 
 # To expose all actuator endpoints, use:
 # management.endpoints.web.exposure.include=*
