add spring boot actuator for prometheus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,8 @@ management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=metrics,prometheus,health,info
 
 # To expose all actuator endpoints, use:
-# management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
+
+logging.level.org.springframework.boot.actuate=DEBUG
+logging.level.org.springframework.security=DEBUG
+
